# vfs.rar

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml  buildPlugin.groovy
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/tinyxml/: CMakeLists.txt
lib/: kodi-UnrarXLib-note.txt
lib/UnrarXLib/: CMakeLists.txt  UnrarX.hpp  arccmt.cpp  archive.cpp  arcread.cpp  cmddata.cpp  cmdmix.cpp  compress.hpp  consio.cpp  crypt.cpp  dll.cpp  dll.hpp  errhnd.cpp  extinfo.cpp  extract.cpp  extract.hpp  filcreat.cpp  file.cpp  file.hpp  filefn.cpp  filestr.cpp  find.cpp  hardlinks.cpp  isnt.cpp  loclang.hpp  log.cpp  log.hpp  match.cpp  options.hpp  os.hpp  pathfn.cpp  pathfn.hpp  rar.cpp  rar.hpp  raros.hpp  rdwrfn.cpp  rdwrfn.hpp  recvol.cpp  resource.cpp  rijndael.cpp  (+19 more)
src/: Helpers.h  RarControl.cpp  RarControl.h  RarExtractThread.cpp  RarExtractThread.h  RarFile.cpp  RarFile.h  RarManager.cpp  RarManager.h  RarPassword.cpp  RarPassword.h  codecvt.h  wstring_convert.h
src/encryption/: encrypt.h  kodi-note.txt  vigenere.h
vfs.rar/: addon.xml  addon.xml.in
vfs.rar/resources/: settings.xml
vfs.rar/resources/language/resource.language.af_za/: strings.po
vfs.rar/resources/language/resource.language.am_et/: strings.po
vfs.rar/resources/language/resource.language.ar_sa/: strings.po
vfs.rar/resources/language/resource.language.ast_es/: strings.po
vfs.rar/resources/language/resource.language.az_az/: strings.po
vfs.rar/resources/language/resource.language.be_by/: strings.po
vfs.rar/resources/language/resource.language.bg_bg/: strings.po
vfs.rar/resources/language/resource.language.bs_ba/: strings.po
vfs.rar/resources/language/resource.language.ca_es/: strings.po
vfs.rar/resources/language/resource.language.cs_cz/: strings.po
vfs.rar/resources/language/resource.language.cy_gb/: strings.po
vfs.rar/resources/language/resource.language.da_dk/: strings.po
vfs.rar/resources/language/resource.language.de_de/: strings.po
vfs.rar/resources/language/resource.language.el_gr/: strings.po
vfs.rar/resources/language/resource.language.en_au/: strings.po
vfs.rar/resources/language/resource.language.en_gb/: strings.po
vfs.rar/resources/language/resource.language.en_nz/: strings.po
vfs.rar/resources/language/resource.language.en_us/: strings.po
vfs.rar/resources/language/resource.language.eo/: strings.po
vfs.rar/resources/language/resource.language.es_ar/: strings.po
vfs.rar/resources/language/resource.language.es_es/: strings.po
vfs.rar/resources/language/resource.language.es_mx/: strings.po
vfs.rar/resources/language/resource.language.et_ee/: strings.po
vfs.rar/resources/language/resource.language.eu_es/: strings.po
vfs.rar/resources/language/resource.language.fa_af/: strings.po
vfs.rar/resources/language/resource.language.fa_ir/: strings.po
vfs.rar/resources/language/resource.language.fi_fi/: strings.po
vfs.rar/resources/language/resource.language.fo_fo/: strings.po
vfs.rar/resources/language/resource.language.fr_ca/: strings.po
vfs.rar/resources/language/resource.language.fr_fr/: strings.po
vfs.rar/resources/language/resource.language.gl_es/: strings.po
vfs.rar/resources/language/resource.language.he_il/: strings.po
vfs.rar/resources/language/resource.language.hi_in/: strings.po
vfs.rar/resources/language/resource.language.hr_hr/: strings.po
vfs.rar/resources/language/resource.language.hu_hu/: strings.po
vfs.rar/resources/language/resource.language.hy_am/: strings.po
vfs.rar/resources/language/resource.language.id_id/: strings.po
vfs.rar/resources/language/resource.language.is_is/: strings.po
vfs.rar/resources/language/resource.language.it_it/: strings.po
vfs.rar/resources/language/resource.language.ja_jp/: strings.po
vfs.rar/resources/language/resource.language.ko_kr/: strings.po
vfs.rar/resources/language/resource.language.lt_lt/: strings.po
vfs.rar/resources/language/resource.language.lv_lv/: strings.po
vfs.rar/resources/language/resource.language.mi/: strings.po
vfs.rar/resources/language/resource.language.mk_mk/: strings.po
vfs.rar/resources/language/resource.language.ml_in/: strings.po
vfs.rar/resources/language/resource.language.mn_mn/: strings.po
vfs.rar/resources/language/resource.language.ms_my/: strings.po
vfs.rar/resources/language/resource.language.mt_mt/: strings.po
vfs.rar/resources/language/resource.language.my_mm/: strings.po
vfs.rar/resources/language/resource.language.nb_no/: strings.po
vfs.rar/resources/language/resource.language.nl_nl/: strings.po
vfs.rar/resources/language/resource.language.oc_fr/: strings.po
vfs.rar/resources/language/resource.language.os_os/: strings.po
vfs.rar/resources/language/resource.language.pl_pl/: strings.po
vfs.rar/resources/language/resource.language.pt_br/: strings.po
vfs.rar/resources/language/resource.language.pt_pt/: strings.po
vfs.rar/resources/language/resource.language.ro_md/: strings.po
vfs.rar/resources/language/resource.language.ro_ro/: strings.po
vfs.rar/resources/language/resource.language.ru_ru/: strings.po
vfs.rar/resources/language/resource.language.scn/: strings.po
vfs.rar/resources/language/resource.language.si_lk/: strings.po
vfs.rar/resources/language/resource.language.sk_sk/: strings.po
vfs.rar/resources/language/resource.language.sl_si/: strings.po
vfs.rar/resources/language/resource.language.sq_al/: strings.po
vfs.rar/resources/language/resource.language.sr_rs/: strings.po
vfs.rar/resources/language/resource.language.sr_rs@latin/: strings.po
vfs.rar/resources/language/resource.language.sv_se/: strings.po
(+11 files in other folders)
